--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             
             <div class="hero-left">
             <div class="image-container">
-                <img src="coffee.png" alt="no image">
+                <img src="images/coffee.png" alt="no image">
             </div>
         </div>
             <div class="hero-right">
