--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
          </section>
 
         <section class="skills" id="nav-skills">
-            <h3 class="clip">Skills and Proficiencies</h3>
+            <h3>Skills and Proficiencies</h3>
             <div class="first-container">
                 <div class="skills-content">
                 <h3>Web Development</h3>
